@@ -27,6 +27,7 @@ from Acquisition import aq_base, aq_inner, aq_parent
 
 from Products.CMFCore.utils import getToolByName
 
+from Products.CPSCore.TransactionManager import get_transaction_manager
 from Products.CPSCore.ProxyBase import ProxyFolderishDocument
 from Products.CPSCore.ProxyBase import ProxyBTreeFolderishDocument
 
@@ -43,7 +44,7 @@ except ImportError:
 _EVT_MGR_ATTRIBUTE = '_cps_event_manager'
 
 # We don't want any other hooks executed before this one right now.  It
-# will have an order of -100
+# will have an order of 100
 _EVT_MGR_ORDER = 100
 
 class EventManager:
@@ -53,12 +54,12 @@ class EventManager:
     # XXX This may be monkey-patched by unit-tests.
     DEFAULT_SYNC = False
 
-    def __init__(self, txn):
+    def __init__(self, mgr):
         """Initialize and register this manager with the transaction.
         """
         self._events = {}
         self._sync = self.DEFAULT_SYNC
-        txn.addBeforeCommitHook(self, order=_EVT_MGR_ORDER)
+        mgr.addBeforeCommitHook(self, order=_EVT_MGR_ORDER)
 
     def setSynchonous(self, sync):
         """Set queuing mode.
@@ -149,7 +150,7 @@ class EventManager:
                             "Subscriptions Tool not found")
         LOG("EventManager", DEBUG, "__call__ DONE")
 
-def _remove_event_manager():
+def del_event_manager():
     txn = transaction.get()
     setattr(txn, _EVT_MGR_ATTRIBUTE, None)
 
@@ -161,6 +162,6 @@ def get_event_manager():
     txn = transaction.get()
     mgr = getattr(txn, _EVT_MGR_ATTRIBUTE, None)
     if mgr is None:
-        mgr = EventManager(txn)
+        mgr = EventManager(get_transaction_manager())
         setattr(txn, _EVT_MGR_ATTRIBUTE, mgr)
     return mgr
