@@ -60,6 +60,10 @@ class DummyRepositoryTool:
 portal_repository = DummyRepositoryTool()
 
 class FakeTransaction:
+    def addBeforeCommitHook(self, hook):
+        pass
+
+class FakeTransactionManager:
     def addBeforeCommitHook(self, hook, order):
         pass
 
@@ -117,7 +121,7 @@ class Dummy:
 class EventManagerTest(unittest.TestCase):
 
     def get_manager(self):
-        return EventManager(FakeTransaction())
+        return EventManager(FakeTransactionManager())
 
     def test_compute_key(self):
 
